# chatapp

./: .dockerignore  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial.sql  0002_conversations.sql
backend/src/: app.rs  attachments.rs  auth.rs  chat.rs  config.rs  error.rs  friends.rs  main.rs  messages.rs  pg.rs  rooms.rs  security.rs  state.rs  users.rs  ws.rs
frontend/: app.js  index.html  styles.css
